--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "npm": "^8.1.1",
+    "sass-loader": "^10.0.0-rc.0",
     "vue": "^3.0.0",
-    "vue-router": "^3.5.3",
+    "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
