--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
-    "npm": "^8.1.1",
-    "sass-loader": "^10.0.0-rc.0",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.8",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.6.1",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   },
   "eslintConfig": {
     "root": true,
