--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,31 @@
-version: '3'
-
+version : "3.8"
 services:
-  phoenix:
-    build:
-      context: ./api
-    environment:
-      PGUSER: postgres
-      PGPASSWORD: 0504
-      PGDATABASE: apiproject_dev
-      PGPORT: 5432
-      PGHOST: localhost
-    ports:
-      - 4000:4000
-    depends_on:
-      - db
-  db:
-    # We use the predefined Postgres image
-    image: postgres:9.6
-    environment:
-      # Set user/password for Postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      # Set a path where Postgres should store the data
-      PGDATA: /var/lib/postgresql/data/pgdata
-    restart: always
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+    back:
+        container_name: apiproject_back
+        image: apiproject/back
+        build:
+            context: ./api
+        environment:
+            PGUSER: postgres
+            PGPASSWORD: postgres
+            PGDATABASE: apiproject_dev
+            PGPORT: 5432
+            PGHOST: db
+        ports:
+            - "4000:4000"
+        depends_on:
+            - db
+    db:
+        container_name: apiproject_db
+        image: postgres:12.8
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
+            PGDATA: /var/lib/postgresql/data/pgdata
+        volumes:
+            - "/var/run/postgres/postgres.sock:/var/run/postgres/postgres.sock"
+            - "dbdata:/var/lib/postgresql/data"
+        restart: always
 volumes:
-  pgdata:
+    dbdata:
+
