--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,17 +1,17 @@
-# ./Dockerfile
-
 FROM elixir:latest
 
 RUN apt-get update && \
-  apt-get install -y postgresql-client
+        apt-get install -y inotify-tools && \
+        apt-get install -y postgresql-client
 
-RUN mkdir /app
-COPY . /app
-WORKDIR /app
+RUN mkdir /T_POO_API
+COPY . /T_POO_API
+WORKDIR /T_POO_API
 
 RUN mix local.hex --force
+# RUN mix deps.clean --all
+RUN mix deps.get
 RUN mix local.rebar --force
-
 RUN mix do compile
 
-CMD ["/app/entrypoint.sh"]
+CMD ["/T_POO_API/entrypoint.sh"]
