--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,16 @@ services:
             - "4000:4000"
         depends_on:
             - db
+    front:
+        container_name: apiprojet_front
+        image: apiproject/front
+        build:
+            context: ./client
+        ports:
+            - "8080:8080"
+        depends_on:
+            - back
+        restart: always
     db:
         container_name: apiproject_db
         image: postgres:12.8
