--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
