--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "bootstrap-vue": "^2.21.2",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-composition-helpers": "^1.0.23"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.8",
